@@ -1,3 +1,8 @@
+2014-11-28  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mkgroup.c (main): Call enum_local_groups with offset 0x30000 for local
+	machine, too.
+
 2014-11-27  Corinna Vinschen  <corinna@vinschen.de>
 
 	* mkgroup.c (main): Call enum_groups with offset 0x30000 for local
